gcc/gcc/testsuite/algol60.dg/fail/fun2.a60
'comment' { dg-do compile } ;
'begin'
	'procedure' foo1;
	'begin'
		a := a + 1; 'comment' { dg-warning "implicit|mismatch" } ;
	'end';

	'boolean' a;
	foo1; 'comment' { dg-error "" } ;
'end';
